fix bug where image holes dont align
Fix a bug by adding strict hight to image div so it does not stretch On
taller view ports

--- a/style.css
+++ b/style.css
@@ -103,9 +103,14 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    height: 848px;
     background-size: 100% 100%;
     position: relative;
+}
+
+.filler {
+    background-color: rgb(14, 14, 14);
+    flex: 1;
 }
 
 #imgcuttopleft, #imgcutbotleft, #imgcuttopright, #imgcutbotright {
